add DirectedGraphAlgorithms and implements adyacencias() of DirectedGraph